Skip assertions of m_repaintRects in RenderLayer::recursiveUpdateLayerPositionsAfterScroll if ForceCompositingMode is off https://bugs.webkit.org/show_bug.cgi?id=265537

Reviewed by NOBODY (OOPS!).

Some layout tests were crashing due to an assertion failure for GTK
and Windows ports. Mac WK2 and WPE port don't crash because they
enable ForceCompositingMode. Mac WK1 skips the assertion. See
bug#188121. Skip these assertions if ForceCompositingMode is disabled.

* LayoutTests/platform/wincairo/TestExpectations:
* Source/WebCore/rendering/RenderLayer.cpp: